src/grammars/JSGraphQLEndpointDocParser.bnf
/**
 * Copyright (c) 2015-present, Jim Kynde Meyer
 * All rights reserved.
 * <p>
 * This source code is licensed under the MIT license found in the
 * LICENSE file in the root directory of this source tree.
 */
{

    parserClass="com.intellij.lang.jsgraphql.endpoint.doc.parser.JSGraphQLEndpointDocParser"

    psiClassPrefix="JSGraphQLEndpointDoc"
    psiImplClassSuffix="Impl"
    psiPackage="com.intellij.lang.jsgraphql.endpoint.doc.psi"
    psiImplPackage="com.intellij.lang.jsgraphql.endpoint.doc.psi.impl"

    extends="com.intellij.lang.jsgraphql.endpoint.doc.psi.JSGraphQLEndpointDocPsiElement"

    elementTypeHolderClass="com.intellij.lang.jsgraphql.endpoint.doc.JSGraphQLEndpointDocTokenTypes"
    elementTypePrefix=""
    elementTypeClass="com.intellij.lang.jsgraphql.endpoint.doc.JSGraphQLEndpointDocTokenType"
    tokenTypeClass="com.intellij.lang.jsgraphql.endpoint.doc.JSGraphQLEndpointDocTokenType"

    tokens=[
        docName='regexp:@([_A-Za-z][_0-9A-Za-z]*)?'
        docValue='regexp:[_A-Za-z][_0-9A-Za-z]*'
        docText='regexp:[^\s]+'
    ]
}

Document ::= Rule*

private Rule ::= Tag | docText

Tag ::= docName docValue {pin=1}
